changed nav bar

--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -12,13 +12,13 @@
     top:0;
     .header{
         left:0;
-        background-color:$orangeYellowCrayola-color;
+        background-color:$pinkCoral-color;
         margin:0;
         top:0;
         position: absolute;
         padding:0;
         ul{
-            background-color:$orangeYellowCrayola-color;
+            background-color:$pinkCoral-color;
         }
         .logo {
             padding:0;
