--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -3,7 +3,7 @@
     background-color: $magnoliaWhite-color;
     font-family: $quicksand-font;
     font-size: 16px;
-    margin-top:120px;
+    margin-top:30px;
 }
 //SCROLL BAR
 /* width */
@@ -77,6 +77,7 @@
                 }
                 .welcomeTitle{
                     font-size:1.9em;
+                    margin-top: 0;
                 }
                
                 .pfp {
@@ -347,6 +348,7 @@
     margin: 0;
     padding: 0;
 
+
     .tooltip {
         margin-left: 10px;
     }
@@ -406,7 +408,7 @@ svg {
     //     }
     // }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     .profileContent{
         display:None;
     }
