SETTINGS: Finished settings page waiting for review.

--- a/css/page/_settings.scss
+++ b/css/page/_settings.scss
@@ -1,83 +1,330 @@
-.settings {
-    position: relative;
+.s-container {
+    margin-left: 60px;
+    height: 100vh;
+    font-family: $raleway-font;
+    // position: fixed;
     display: flex;
-    align-items: stretch;
-    justify-content: center;
-    flex-direction: row;
-
-    .settings div {
-        border-style: dotted;
+    flex-direction: col;
+    // background:url("../images/In progress-cuate.png");
+    background-image:url("../images/In progress-cuate.png");
+    background-position: right bottom;
+    background-size: 60% ;
+    // background-attachment: fixed;
+    background-repeat: no-repeat;
+    label {
+        width: 10%;
+        margin: 20px auto;
+        text-align: center;
+        border-radius: 20px;
+        font-size: 1.3em;
     }
 
-    &-iframe-1 {
-        margin: 10em;
+    input {
+        margin: 20px auto;
+        text-align: left;
+        border-radius: 20px;
+        padding: 20px 10px;
+        outline: none;
+        font-size: 1.3em;
+        text-align: center;
+    }
+
+    // .item {
+    //     // background-color: pink;
+    //     width: 40%;
+    // }
+
+    // .item2 {
+    //     // background-color: pink;
+    //     width: 60%;
+    // }
+
+    #options {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        flex: 1;
-        padding-left: 10em;
-        padding-right: 10em;
+        height: 90vh;
+        width: 80%;
+        margin: 10px auto;
+        padding: 10px;
+        position: absolute;
 
-        &__button {
-            margin-bottom: 2em;
-            background-color: $orangeYellowCrayola-color;
-            border: none;
-            border-radius: 10px;
-            padding: 10px;
+        button {
+            background-color: $magnoliaWhite-color;
+            width: 90%;
+            float: right;
+            margin: 5px 0 20px 40px;
+            padding: 10px 20px 20px 5px;
+            border: 5px solid $platinum-color;
+            border-radius: 40px;
             font-family: $quicksand-font;
-            font-size: 20px;
+            font-weight: bold;
+            font-size: 1.2em;
+            transition: 0.5s;
+        }
 
-            &:hover {
+        .itemO {
+            width: 50%;
+
+            .box {
+                width: 90%;
+            }
+        }
+
+        .buttons {
+
+
+            #b1 {
+                top: 16px
+            }
+
+            #b2 {
+                top: 106px;
+            }
+
+            #b3 {
+                top: 195px;
                 background-color: $maximumBluePurple-color;
             }
+
+            #b4 {
+                top: 283px;
+                background-color: $fieryRose-color;
+            }
+
+            #b5 {
+                top: 372px;
+            }
+
+            #b6 {
+                top: 460px;
+            }
+
+            #b1,
+            #b5 {
+                background-color: $orangeYellowCrayola-color;
+            }
+
+            #b2,
+            #b6 {
+                background-color: $magicMint-color;
+            }
+
+            button:hover {
+                box-shadow: 2px 2px 4px $jet-color;
+                transition: 1s;
+
+            }
+        }
+
+        #_username,
+        #_remove {
+            border-color: $orangeYellowCrayola-color
+        }
+
+        #_username:hover,
+        #_remove:hover {
+            background-color: $orangeYellowCrayola-color;
+            color: $magnoliaWhite-color;
+            border-color: $platinum-color
+        }
+
+        #_socials {
+            border-color: $maximumBluePurple-color;
+        }
+
+        #_socials:hover {
+            background-color: $maximumBluePurple-color;
+            color: $magnoliaWhite-color;
+            border-color: $platinum-color
+        }
+
+        #Interests_bio_name {
+            border-color: $fieryRose-color;
+        }
+
+        #Interests_bio_name:hover {
+            background-color: $fieryRose-color;
+            color: $magnoliaWhite-color;
+            border-color: $platinum-color
+        }
+
+        #_password,
+        #_deleteAccount {
+            border-color: $magicMint-color;
+        }
+
+        #_password:hover,
+        #_deleteAccount:hover {
+            background-color: $magicMint-color;
+            color: $magnoliaWhite-color;
+            border-color: $platinum-color
+        }
+
+        .box {
+            border: 1px solid $jet-color;
+            padding: 20px;
+            margin: 20px auto;
+            background-color: $magnoliaWhite-color;
+            border-radius: 40px;
+            height: fit-content;
+            box-shadow: 0 2px 2px $jet-color;
+
+            h1 {
+                background-color: $platinum-color;
+                border-radius: 40px;
+                padding: 10px;
+                width: fit-content;
+                text-align: center;
+                margin: 10px auto 30px auto;
+
+            }
+
+            .inputPosition {
+                display: flex;
+                flex-direction: row;
+                padding: 10px;
+
+                .item {
+                    width: 30%;
+                    padding: 5px;
+                    background-color: $magnoliaWhite-color;
+                }
+
+                .item2 {
+                    width: 60%;
+                    padding: 5px;
+                    background-color: $magnoliaWhite-color;
+                }
+            }
+
+            #change {
+                display: block;
+                border-radius: 20px;
+                padding: 10px 20px;
+                background-color: $polishedPine-color;
+                font-family: $quicksand-font;
+                font-weight: bold;
+                color: $magnoliaWhite-color;
+                border: 2px solid $polishedPine-color;
+                outline: none;
+                margin: 80px auto;
+                transition: 0.5s;
+                text-align: center;
+                width: fit-content;
+
+            }
+
+            #change:hover {
+                border: 2px solid $jet-color;
+                transition: 1s;
+
+            }
+
+            .removeLink {
+                text-align: center;
+
+                input {
+                    margin: 10px auto;
+                    padding: 5px;
+                }
+            }
+
+            .inputPosition {
+                display: flex;
+                flex-direction: row;
+                padding: 10px;
+
+                .item {
+                    width: 30%;
+                    padding: 5px;
+                    background-color: $magnoliaWhite-color;
+                }
+
+                .item2 {
+                    width: 60%;
+                    padding: 5px;
+                    background-color: $magnoliaWhite-color;
+                }
+            }
+
+
+        }
+
+        @media screen and (max-width: 800px) {
+            .s-container {
+                background-color: $magnoliaWhite-color;
+
+                #options {
+                    margin-left: 20px;
+                    width: 100%;
+                }
+            }
+
+            .itemO {
+                width: 100%;
+
+                .box {
+                    width: 90%;
+                }
+            }
+            
+        }
+
+        @media screen and (max-width: 600px) {
+            .s-container{
+                background-image:none;
+            }
+            .itemO {
+                width: 90%;
+                .inputPosition {
+                    flex-direction: row;
+                }
+                .inputPosition {
+                    flex-direction: row;
+                }
+            }
+            .box {
+                width:80%;
+                .inputPosition {
+                    display:block;
+                  .item{
+                      width:90%;
+                  }
+                  .item2{
+                      width:90%;
+                  }
+                }
+            }
+            .removeLink{
+                input{
+                    width:90%;
+                }
+            }
+          
+        }
+
+
+    }
+
+
+    @keyframes fadein {
+        0% {
+            opacity: 0
+        }
+
+        100% {
+            opacity: 0.5
         }
     }
 
-    &-iframe-2 {
-        margin: 10em;
-        iframe{
-            display: block;
+    @media screen and (max-width: 800px) {
+        .itemO {
             width: 100%;
-            height: 100%;
-        }
-    }
-}
 
-
-/* mobile - starts at tablet size (1024px) */
-
-@media(max-width: 1024px) {
-    .settings {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-
-        .settings div {
-            border-style: dotted;
-        }
-    }
-
-    &-iframe-1 {
-        margin: 10em;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        flex: 1;
-        padding-left: 10em;
-        padding-right: 10em;
-        flex-shrink: 2;
-        &__button {
-            margin-bottom: 2em;
-            width: 95%;
-            background-color: $orangeYellowCrayola-color;
-            border: none;
-            border-radius: 10px;
-            padding: 10px;
-            font-family: $quicksand-font;
-
-            &:hover {
-                background-color: $maximumBluePurple-color;
+            .box {
+                width: 90%;
             }
         }
     }
+
 }
