--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -2,6 +2,8 @@
     text-align: center;
     font-family: $quicksand-font;
     background-color: $magnoliaWhite-color;
+    overflow-x: hidden;
+
 
 }
 // .contact-container {
@@ -57,10 +59,13 @@
         border: none;
         background-color: $orangeYellowCrayola-color;
         font-size: 18px;
+        margin-bottom: 50px;
     }
 }
 
 .contact-body {
+    margin: 0px;
+    padding: 0px;
     h2 {
         color: black;
         margin-top: 5%;
@@ -68,3 +73,109 @@
         font-size: 40px;
     }
 }
+
+.footer {
+    background-color: $pinkCoral-color;
+    width: 100%;
+    height: 160px;
+    // padding-top: 10px;
+    padding-bottom: 10px;
+
+    // li {
+    //     display: block;
+    // }
+
+    hr {
+        width: 100%;
+        border: 1px solid black;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .footer-flex {
+        padding-top: 25px;
+        display: flex;
+        float: right;
+        justify-content: center;
+        font-size: 16px;
+        margin-right: 100px;
+
+        .footer-item {
+            font-weight: 400;
+            flex: 1;
+            width: 100%;
+            flex-basis: 30%;
+
+        }
+
+        .footer-item2 {
+            padding-bottom: 10px;
+            margin-left: 200px;
+            font-size: 15px;
+            a {
+                color: black;
+                text-decoration: none;
+                font-weight: 500;
+            }
+        }
+    }
+
+    .footer-logo {
+        font-size: 30px;
+        font-weight: 700;
+        float: left;
+        margin-left: 100px;
+    }
+
+    .footer-title {
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .footer-copyright {
+        float: left;
+        margin-left: 100px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .footer {
+        font-size: 14px;
+        height: 180px;
+        .menu {
+            display: none;
+        }
+    }
+
+}
+
+@media (max-width:1000px) {
+    .footer {
+        font-size: 14px;
+        height: 150px;
+        float: none;
+
+        .menu {
+            display: none;
+        }
+
+        .footer-logo {
+            display: none;
+        }
+
+        .footer-flex {
+            padding-top: 10px;
+            // float: none;
+            justify-content: center;
+
+    
+            .footer-item2 {
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
+    }
+
+}
+
