--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap");
+.about-body {
+  font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
+  margin: 0px;
+  padding: 0px;
+}
+
 .content {
   font-size: 20px;
   background-color: #FFFAFF;
@@ -209,7 +216,7 @@
   border-radius: 20px;
   width: 70%;
   margin-top: 30px;
-  margin: 50px auto 50px auto;
+  margin: 50px auto 80px auto;
   padding: 20px;
 }
 
@@ -436,6 +443,7 @@
   text-align: center;
   font-family: "Quicksand", sans-serif;
   background-color: #FFFAFF;
+  overflow-x: hidden;
 }
 
 .msg-form {
@@ -489,6 +497,12 @@
   border: none;
   background-color: #F2CD5D;
   font-size: 18px;
+  margin-bottom: 50px;
+}
+
+.contact-body {
+  margin: 0px;
+  padding: 0px;
 }
 
 .contact-body h2 {
@@ -496,6 +510,106 @@
   margin-top: 5%;
   margin-bottom: 40px;
   font-size: 40px;
+}
+
+.footer {
+  background-color: #FDB9A9;
+  width: 100%;
+  height: 160px;
+  padding-bottom: 10px;
+}
+
+.footer hr {
+  width: 100%;
+  border: 1px solid black;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.footer .footer-flex {
+  padding-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  float: right;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 16px;
+  margin-right: 100px;
+}
+
+.footer .footer-flex .footer-item {
+  font-weight: 400;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.footer .footer-flex .footer-item2 {
+  padding-bottom: 10px;
+  margin-left: 200px;
+  font-size: 15px;
+}
+
+.footer .footer-flex .footer-item2 a {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.footer .footer-logo {
+  font-size: 30px;
+  font-weight: 700;
+  float: left;
+  margin-left: 100px;
+}
+
+.footer .footer-title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.footer .footer-copyright {
+  float: left;
+  margin-left: 100px;
+}
+
+@media (max-width: 1300px) {
+  .footer {
+    font-size: 14px;
+    height: 180px;
+  }
+  .footer .menu {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .footer {
+    font-size: 14px;
+    height: 150px;
+    float: none;
+  }
+  .footer .menu {
+    display: none;
+  }
+  .footer .footer-logo {
+    display: none;
+  }
+  .footer .footer-flex {
+    padding-top: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer .footer-flex .footer-item2 {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .main {
