--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -76,6 +76,7 @@
 
 .footer {
     background-color: $pinkCoral-color;
+    font-family: $quicksand-font;
     width: 100%;
     height: 160px;
     // padding-top: 10px;
