--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap");
-.about-body {
-  font-family: "Quicksand", sans-serif;
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-}
-
 .content {
   font-size: 20px;
   background-color: #FFFAFF;
@@ -216,7 +209,7 @@
   border-radius: 20px;
   width: 70%;
   margin-top: 30px;
-  margin: 50px auto 80px auto;
+  margin: 50px auto 50px auto;
   padding: 20px;
 }
 
@@ -514,6 +507,7 @@
 
 .footer {
   background-color: #FDB9A9;
+  font-family: "Quicksand", sans-serif;
   width: 100%;
   height: 160px;
   padding-bottom: 10px;
@@ -2298,11 +2292,12 @@ button {
 }
 
 .result-body .results-container {
-  height: 420px;
+  height: 450px;
   background-color: #F2CD5D;
   border-radius: 20px;
   margin-right: 40px;
   margin-left: 100px;
+  padding: 10px;
 }
 
 .result-body h2 {
@@ -2310,6 +2305,8 @@ button {
   margin: auto;
   color: black;
   height: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .result-body .container {
@@ -2703,11 +2700,32 @@ button {
   overflow-x: hidden;
 }
 
+.register-bg {
+  background-image: url(../images/password.png);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: 50vw 15vh;
+}
+
+.register-container {
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  color: white;
+  background-color: #70a288;
+  width: 40%;
+  float: left;
+  height: 70%;
+  border-radius: 20px;
+  margin-top: 120px;
+  margin-left: 70px;
+  padding: 10px;
+}
+
 .register-body {
   text-align: center;
-  color: black;
+  color: white;
   font-family: "Quicksand", sans-serif;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .register-form input {
@@ -2752,30 +2770,20 @@ button {
 }
 
 .register-form #register-body-email {
-  width: 435px;
+  width: 58%;
 }
 
 .register-form #register-body-username {
-  width: 435px;
+  width: 58%;
 }
 
-.error-content .errorImage {
-  z-index: -1;
-  display: block;
-  margin: 100px  auto;
-  width: 65%;
-}
-
-@media screen and (max-width: 800px) {
-  .error-content {
-    margin: 250px  auto;
-    width: 100%;
+@media (max-width: 800px) {
+  .register-bg {
+    background: none;
   }
-}
-
-@media screen and (max-width: 600px) {
-  .error-content {
-    margin: 450px 10px;
+  .register-container {
+    margin-left: 20px;
+    margin-right: 20px;
     width: 90%;
   }
 }
