--- a/css/page/_login.scss
+++ b/css/page/_login.scss
@@ -1,6 +1,7 @@
 .login-html {
     overflow-x: hidden;
 }
+
 .login-bg {
     background-image: url(../images/authentication.png);
     background-size: 50%;
@@ -9,7 +10,7 @@
     background-position: 50vw;
 }
 
-.login-body{
+.login-body {
     font-size: 3em;
     text-align: center;
     font-family: $quicksand-font;
@@ -24,8 +25,7 @@
     margin-top: 120px;
     margin-left: 70px;
     padding: 10px;
-
-    &__button{
+    &__button {
         font-family: $quicksand-font;
         background-color: $orangeYellowCrayola-color;
         height: 40px;
@@ -36,20 +36,18 @@
         border: none;
         margin-bottom: 20px;
     }
-
-    &__image{
+    &__image {
         margin: 1em;
         width: 120px;
     }
-    h1{
+    h1 {
         padding-bottom: 30px;
     }
-
-    &__prompt, &__text{
+    &__prompt,
+    &__text {
         font-size: $navBartext-fontsize;
     }
-
-    &__info{
+    &__info {
         font-family: $quicksand-font;
         background-color: white;
         height: 40px;
@@ -58,39 +56,31 @@
         margin: 10px;
         margin-bottom: 20px;
         text-align: center;
-
-
     }
-
-    &__link{
+    &__link {
         text-decoration: none;
         color: black;
-        &:hover{
+        &:hover {
             color: white;
         }
     }
-
-    &__forgot{
+    &__forgot {
         font-size: 20px;
         color: black;
-        &-link{
+        &-link {
             text-decoration: none;
             color: white;
         }
     }
-
-
 }
 
 @media(max-width: 800px) {
     .login-bg {
         background: none;
     }
-
     .login-body {
         margin-left: 20px;
         margin-right: 20px;
         width: 90%;
-
     }
 }
